--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
