--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^11.6.0",
     "framer-motion": "^12.9.2",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
