--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
